# To-Do-Django

todo-django/: pyproject.toml
todo-django/base/: models.py  urls.py  views.py
todo-django/base/migrations/: 0001_initial.py
todo-django/base/templates/base/: login.html  main.html  register.html  task_confirm_delete.html  task_detail.html  task_form.html  task_list.html
todo-django/todo_list/: settings.py
