[tool.poetry]
name = "todo-django"
version = "0.1.0"
description = ""
authors = ["Augusto-Moore <aoliveira@moorebrasil.com.br>"]
readme = "README.md"
packages = [{include = "todo_django"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
